<resources>
    <string name="app_name">KAIROS</string>
    <string name="login_subtitle">La aventura está por iniciar,\npor favor inicia sesión</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="login_recover_password">Recupera Tu Contraseña</string>
    <string name="login_google_button">Ingresa con Google</string>
    <string name="login_no_account">No tienes cuenta? </string>
    <string name="login_register">Regístrate</string>
    <string name="onboarding_description">Inicia una nueva aventura con KAIROS y descubre una nueva forma de ver el mundo</string>
    <string name="onboarding_button">Comienza</string>
    <string name="splash_author">Liceth Camila Marinez Bermudez</string>
    <string name="register_title">Registro</string>
    <string name="register_subtitle">Crea tu cuenta y comienza la aventura</string>
    <string name="register_names">Nombres</string>
    <string name="register_lastnames">Apellidos</string>
    <string name="register_email">Correo electrónico</string>
    <string name="register_repeat_password">Repetir Contraseña</string>
    <string name="register_terms">Acepto los términos y condiciones</string>
    <string name="register_button">Registrarse</string>
    <string name="register_already_account">¿Ya tienes cuenta? </string>
    <string name="register_go_login">Inicia sesión</string>
    <string name="main_icon">⏱</string>
    <string name="main_bienvenido_a">Bienvenido a</string>
    <string name="main_kairos">KAIROS</string>
    <string name="main_subtitulo">Tu tiempo, tu mejor inversión</string>
    <string name="login_usuario_vacio">Por favor ingresa tu usuario</string>
    <string name="login_password_vacio">Por favor ingresa tu contraseña</string>
    <string name="login_bienvenido">¡Bienvenido a KAIROS!</string>
    <string name="login_google">Ingresando con Google...</string>
    <string name="login_recuperar">Recuperar contraseña</string>
</resources>