<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/login_background"
    tools:context=".Activities.OnboardingActivity">

    <!-- LOGO GRANDE ARRIBA -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher"/>

    <!-- NOMBRE DE LA APP -->
    <TextView
        android:id="@+id/tvNombreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/login_dark"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginTop="16dp"/>

    <!-- DESCRIPCIÓN -->
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_description"
        android:textColor="@color/onboarding_description_text"
        android:textSize="16sp"
        android:fontFamily="serif"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <!-- BOTÓN COMIENZA -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnComienza"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/onboarding_button"
        android:textSize="24sp"
        android:textColor="@color/login_white"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:backgroundTint="@color/login_dark_button"
        app:cornerRadius="28dp"
        app:strokeColor="@color/login_white"
        app:strokeWidth="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="48dp"/>

    <!-- LINK REGÍSTRATE -->
    <TextView
        android:id="@+id/tvRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textColor="@color/login_white"
        android:textSize="16sp"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:layout_marginTop="16dp"/>

</LinearLayout>